# netsudo

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
config/: profiles.example.toml
docs/: security-model.md
netsudo/: __init__.py  audit.py  cli.py  config.py  duration.py  installer.py  source.py  transport.py
netsudo/data/: pfsense-helper.php  profiles.example.toml
scripts/: install.py
tests/: test_cli.py  test_config.py  test_duration.py  test_installer.py  test_source.py  test_transport.py
