[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netsudo"
version = "0.1.0"
description = "Temporary, audited pfSense firewall grants from a sudo-like CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "netsudo contributors" }
]
keywords = ["pfsense", "firewall", "jit", "homelab", "network-access"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: System :: Networking :: Firewalls",
]
dependencies = []

[project.scripts]
netsudo = "netsudo.cli:main"
netsudo-install = "netsudo.installer:main"

[tool.setuptools]
packages = ["netsudo"]

[tool.setuptools.package-data]
netsudo = ["data/*.php", "data/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
